<resources>
    <string name="facebook_app_id">763153537548127</string>
    <string name="app_name">সংবিধান প্রতিদিন</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">সংবিধান প্রতিদিন</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">বাংলাদেশের সংবিধান</string>
    <string name="menu_ajker_onucched">আজকের গুরুত্বপূর্ণ অনুচ্ছেদ</string>
    <string name="menu_tofsil">তফসিল</string>
    <string name="menu_porar_niyom">সংবিধান পড়ার নিয়ম</string>
    <string name="menu_itihash">ইতিহাস</string>
    <string name="menu_banan_bivrat">বানান বিভ্রাট</string>
    <string name="menu_ajker_dibosh">আজকের দিবস</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate_us">Rate Us</string>
    <string name="menu_report">Report</string>
    <string name="prostabona_1">বিস্‌মিল্লাহির-রহ্‌মানির রহিম</string>
    <string name="prostabona_2">(দয়াময়, পরম দয়ালু, আল্লাহের নামে)/\n\n     পরম করুণাময় সৃষ্টিকর্তার নামে।</string>
    <string name="prostabona3">প্রস্তাবনা</string>
    <string name="ekshoshatash_title">১২৭।।মহা হিসাব-নিরীক্ষক পদের প্রতিষ্ঠা।।</string>
    <string name="ekshoshatash">(১) বাংলাদেশের একজন মহা হিসাব-নিরীক্ষক ও নিয়ন্ত্রক (অতঃপর "মহা হিসাব-নিরীক্ষক" নামে অভিহিত) থাকিবেন এবং তাঁহাকে রাষ্ট্রপতি নিয়োগদান করিবেন।\n\n
        (২) এই সংবিধান ও সংসদ কর্তৃক প্রণীত যে কোন আইনের বিধানাবলী সাপেক্ষে মহা হিসাব-নিরীক্ষকের কর্মের শর্তাবলী রাষ্ট্রপতি আদেশের দ্বারা যেরূপ নির্ধারণ করিবেন, সেইরূপ হইবে।</string>
    <string name="ekshoatash_title">১২৮।।মহা-হিসাব নিরীক্ষকের দায়িত্ব।।</string>
    <string name="ekshoatash">(১) মহা হিসাব-নিরীক্ষক প্রজাতন্ত্রের সরকারী হিসাব এবং সকল আদালত, সরকারী কর্তৃপক্ষ ও কর্মচারীর সরকারী হিসাব নিরীক্ষা করিবেন ও অনুরূপ হিসাব সম্পর্কে রিপোর্টদান করিবেন এবং সেই উদ্দেশ্যে তিনি কিংবা সেই প্রয়োজনে তাঁহার দ্বারা ক্ষমতাপ্রাপ্ত কোন ব্যক্তি প্রজাতন্ত্রের কর্মে নিযুক্ত যে কোন ব্যক্তির দখলভুক্ত সকল নথি, বহি, রসিদ, দলিল, নগদ অর্থ, ষ্ট্যাম্প, জামিন, ভাণ্ডার বা অন্য প্রকার সরকারী সম্পত্তি পরীক্ষার অধিকারী হইবেন।\n\n
        (২) এই অনুচ্ছেদের (১) দফায় বর্ণিত বিধানাবলীর হানি না করিয়া বিধান করা হইতেছে যে, আইনের দ্বারা প্রত্যক্ষভাবে প্রতিষ্ঠিত কোন যৌথ সংস্থার ক্ষেত্রে আইনের দ্বারা যেরূপ ব্যক্তি কর্তৃক উক্ত সংস্থার হিসাব নিরীক্ষার ও অনুরূপ হিসাব সম্পর্কে রিপোর্ট দানের ব্যবস্থা করা হইয়া থাকে, সেইরূপ ব্যক্তি কর্তৃক অনুরূপ হিসাব নিরীক্ষা ও অনুরূপ হিসাব সম্পর্কে রিপোর্ট দান করা যাইবে।\n\n
        (৩) এই অনুচ্ছেদের (১) দফায় নির্ধারিত দায়িত্বসমূহ ব্যতীত সংসদ আইনের দ্বারা যেরূপ নির্ধারণ করিবেন, মহা হিসাব-নিরীক্ষককে সেইরূপ দায়িত্বভার অর্পণ করিতে পারিবেন এবং এই দফার অধীন বিধানাবলী প্রণীত না হওয়া পর্যন্ত রাষ্ট্রপতি আদেশের দ্বারা অনুরূপ বিধানাবলী প্রণয়ন করিতে পারিবেন।\n\n
        (৪) এই অনুচ্ছেদের (১) দফার অধীন দায়িত্বপালনের ক্ষেত্রে মহা হিসাব-নিরীক্ষককে অন্য কোন ব্যক্তি বা কর্তৃপক্ষের পরিচালনা বা নিয়ন্ত্রণের অধীন করা হইবে না।</string>
    <string name="ekshounotrish_title">১২৯।।মহা হিসাব-নিরীক্ষকের কর্মের মেয়াদ।।</string>
    <string name="ekshounotrish">(১) এই অনুচ্ছেদের বিধানাবলী-সাপেক্ষে মহা হিসাব-নিরীক্ষক তাঁহার দায়িত্ব গ্রহণের তারিখ হইতে পাঁচ বৎসর বা তাঁহার পঁয়ষট্টি বৎসর বয়স পূর্ণ হওয়া ইহার মধ্যে যাহা অগ্রে ঘটে, সেই কাল পর্যন্ত স্বীয় পদে বহাল থাকিবেন।\n\n
        (২) সুপ্রীম কোর্টের কোন বিচারক যেরূপ পদ্ধতি ও কারণে অপসারিত হইতে পারেন, সেইরূপ পদ্ধতি ও কারণ ব্যতীত মহা হিসাব-নিরীক্ষক অপসারিত হইবেন না।\n\n
        (৩) মহা হিসাব-নিরীক্ষক রাষ্ট্রপতিকে উদ্দেশ করিয়া স্বাক্ষরযুক্ত পত্রযোগে স্বীয় পদ ত্যাগ করিতে পারিবেন।\n\n
        (৪) কর্মাবসানের পর মহা হিসাব-নিরীক্ষক প্রজাতন্ত্রের কর্মে অন্য কোন পদে নিযুক্ত হইবার যোগ্য হইবেন না।</string>
    <string name="ekshotrish_title">১৩০।।অস্থায়ী মহা হিসাব-নিরীক্ষক।।</string>
    <string name="ekshotrish">কোন সময়ে মহা হিসাব-নিরীক্ষকের পদ শূন্য থাকিলে কিংবা অনুপস্থিতি, অসুস্থতা বা অন্য কোন কারণে তিনি কার্যভার পালনে অক্ষম বলিয়া রাষ্ট্রপতির নিকট সন্তোষজনকভাবে প্রতীয়মান হইলে ক্ষেত্রমত এই সংবিধানের ১২৭ অনুচ্ছেদের অধীন কোন নিয়োগদান না করা পর্যন্ত কিংবা মহা হিসাব-নিরীক্ষক পুনরায় স্বীয় দায়িত্ব গ্রহণ না করা পর্যন্ত রাষ্ট্রপতি কোন ব্যক্তিকে মহা হিসাব-নিরীক্ষকরূপে কার্য করিবার জন্য এবং উক্ত পদের দায়িত্বভার পালনের জন্য নিয়োগদান করিতে পারিবেন।</string>
    <string name="ekshoektrish_title">১৩১।।প্রজাতন্ত্রের হিসাব-রক্ষার আকার ও পদ্ধতি।।</string>
    <string name="ekshoektrish">রাষ্ট্রপতির অনুমোদনক্রমে মহা হিসাব-নিরীক্ষক যেরূপ নির্ধারণ করিবেন, সেইরূপ আকার ও পদ্ধতিতে প্রজাতন্ত্রের হিসাব রক্ষিত হইবে।</string>
    <string name="ekshobottrish_title">১৩২।।সংসদে মহা হিসাব-নিরীক্ষকের রিপোর্ট উপস্থাপন।।</string>
    <string name="ekshobottrish">প্রজাতন্ত্রের হিসাব সম্পর্কিত মহা হিসাব-নিরীক্ষকের রিপোর্টসমূহ রাষ্ট্রপতির নিকট পেশ করা হইবে এবং রাষ্ট্রপতি তাহা সংসদে পেশ করিবার ব্যবস্থা করিবেন।</string>
    <string name="tofsiltin_title">তৃতীয় তফসিল</string>
    <string name="tofsiltin_titledui">শপথ ও ঘোষণা</string>
    <string name="tofsiltin_titletin">[৪৭ অনুচ্ছেদ\n\n
        (ব্যাখায়াঃ ৪৭ অনুচ্ছেদের দাবি অনুসারে এ তফসিল প্রণীত)</string>
    <string name="tofsiltin_title_rashtropoti_shopoth_title">রাষ্ট্রপতির শপথ</string>
    <string name="tofsiltin_title_rashtropoti_shopoth">১। রাষ্ট্রপতি।– স্পীকার কর্তৃক নিম্নলিখিত ফর্মে শপথ (বা ঘোষোণা)- পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., সশ্রদ্ধচিত্তে শপথ(বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে, আমি আইন-অনুযায়ী বাংলাদেশের রাষ্ট্রপতি-পদের কর্তব্য বিশ্বস্ততার সহিত পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সমর্থন ও নিরাপত্তাবিধান করিব;\n\n
এবং ভীতি বা অনুগ্রহ, অনুরাগ বা বিরাগের বশবর্তী না হইয়া সকলের প্রতি আইন-অনুযায়ী যথাবিহীত আচরণ করিব।”
</string>
    <string name="tofsiltin_title_prodhanmontri_shopoth_title">প্রধানমন্ত্রীর সপথ</string>
    <string name="tofsiltin_title_prodhanmontri_shopoth">২। প্রধানমন্ত্রী এবং অন্যান্য মন্ত্রী, প্রতি-মন্ত্রী ও উপমন্ত্রী।– রাষ্ট্রপতি কর্তৃক নিমনলিখিত ফর্মে শপথ (বা ঘোষণা)- পাঠ পরিচালিত হইবে :\n\n
(ক) পদের শপথ (বা ঘোষণা) :\n\n
“আমি, .................., সশ্রদ্ধচিত্তে শপথ(বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে, আমি আইন-অনুযায়ী সরকারের প্রধানমন্ত্রী (কিংবা ক্ষেত্রমত মন্ত্রী, প্রতি-মন্ত্রী, বা উপমন্ত্রী)- পদের কর্তব্য বিশ্বস্ততার সহিত পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সংরক্ষণ ও নিরাপত্তাবিধান করিব;\n\n
এবং আমি ভীতি বা অনুগ্রহ, অনুরাগ বা বিরাগের বশবর্তী না হইয়া সকল আইন-অনুযায়ী যথাবিহীত আচরণ করিব।”\n\n
(খ) গোপনীয়তার সপথ ( বা ঘোষণা) :\n\n
“আমি, .................., সশ্রদ্ধচিত্তে শপথ(বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে, আমি আইন-অনুযায়ী সরকারের প্রধানমন্ত্রী (কিংবা ক্ষেত্রমত মন্ত্রী, প্রতি-মন্ত্রী, বা উপমন্ত্রী)-রূপে যেসকল বিষয় আমার বিবেচনার জন্য আনিত হইবে বা যেসকল বিষয় আমি অবগত হইব, তাহা প্রধানমন্ত্রী (কিংবা ক্ষেত্রমত মন্ত্রী, প্রতি-মন্ত্রী, উপমন্ত্রী)-যথাযথভাবে আমার কর্তব্য পালনের প্রয়োজন ব্যতীত প্রতক্ষ বা পরোক্ষভাবে কোন ব্যক্তিকে জ্ঞাপন করবনা বা কোন ব্যক্তির নিকট প্রকাশ করিবনা।”
</string>
    <string name="tofsiltin_title_speaker_shopoth_title">স্পীকারের শপথ</string>
    <string name="tofsiltin_title_speaker_shopoth">৩। স্পীকার।– রাষ্ট্রপতি কর্তৃক নিম্নলিখিত ফর্মে শপথ (বা ঘোষণা)-পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., সশ্রদ্ধচিত্তে শপথ(বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে, আমি আইন-অনুযায়ী সংসদের স্পীকারের কর্তব্য (এবং কখনো আহুত হইলে রাষ্ট্রপতির কর্তব্য) বিশ্বস্ততার সহিত পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সংরক্ষণ ও নিরাপত্তাবিধান করিব;\n\n
এবং ভীতি বা অনুগ্রহ, অনুরাগ বা বিরাগের বশবর্তী না হইয়া সকল আইন-অনুযায়ী যথাবিহীত আচরণ করিব।”

</string>
    <string name="tofsiltin_title_MP_shopoth_title">সংসদ-সদস্যের শপথ</string>
    <string name="tofsiltin_title_MP_shopoth">৫। সংসদ-সদস্য।- স্পীকার কর্তৃক নিম্নলিখিত ফর্মে শপথ (বা ঘোষণা)-পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., সংসদ-সদস্য নির্বাচিত হইয়া সশ্রদ্ধচিত্তে সশ্রদ্ধচিত্তে শপথ(বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে,\n\n
আমি যে কর্তব্যভার গ্রহণ করিতে যাইতাছি, তাহা আইন-অনুযায়ী ও বিশ্বস্ততার সহিত পালন করিব;\n\n
        এবং সংসদ-সদস্যরূপে আমার কর্তব্যপালনকে ব্যক্তিগত স্বার্থের দ্বারা প্রভাবিত হইতে দিব না।”
</string>
    <string name="tofsiltin_title_ProdhanBicharpoti_shopoth_title">প্রধান বিচারপতি ও বিচারপতিদের শপথ</string>
    <string name="tofsiltin_title_ProdhanBicharpoti_shopoth">৬। প্রধান বিচারপতি বা বিচারক।– প্রধান বিচারপতির ক্ষেত্রে রাষ্ট্রপতির কর্তৃক এবং সুপ্রীম কোর্টের কোন বিভাগের কোন বিচারকের ক্ষেত্রে প্রধান বিচারপরিত কর্তৃক নিম্নলিখিত ফর্মে শপথ ( বা ঘোষণা)-পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., প্রধান বিচারপতি (বা ক্ষেত্রমত সুপ্রীম কোর্টের আপীল/হাইকোর্ট বিভাগের বিচারক) নিযুক্ত হইয়া সশ্রদ্ধচিত্তে শপথ (বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে,\n\n
আমি আইন-অনুযায়ী আমার ও বিশ্বস্ততার সহিত আমার পদের কর্তব্য পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সমর্থন ও নিরাপত্তাবিধান করিব;\n\n
এবং ভীতি বা অনুগ্রহ, অনুরাগ বা বিরাগের বশবর্তী না হইয়া সকলের প্রতি আইন-অনুযায়ী যথাবিহীত আচরণ করিব।”
</string>
    <string name="tofsiltin_title_ProdhanNirbachonComissioner_shopoth_title">প্রধান নির্বাচন কমিশনার ও নির্বাচন কমিশনারদের শপথ</string>
    <string name="tofsiltin_title_ProdhanNirbachonComissioner_shopoth">৭। প্রধান নির্বাচন কমিশনার বা নির্বাচন কমিশনার।- প্রধান বিচারপতি কর্তৃক নিম্নলিখিত ফর্মে শপথ (বা ঘোষণা)-পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., প্রধান নির্বাচন কমিশনার ( বা ক্ষেত্রমত নির্বাচন কমিশনার) নিযুক্ত হইয়া সশ্রদ্ধচিত্তে শপথ (বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে,\n\n
 আমি আইন-অনুযায়ী আমার ও বিশ্বস্ততার সহিত আমার পদের কর্তব্য পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সমর্থন ও নিরাপত্তাবিধান করিব;\n\n
এবং আমার সরকারী কার্য ও সরকারী সিদ্ধান্তকে ব্যক্তিগত স্বার্থের দ্বারা প্রভাবিত হইতে দিব না।”
</string>
    <string name="tofsiltin_title_MohahishabNirikkhok_shopoth_title">মহাহিসাব-নিরীক্ষক ও নিয়ন্ত্রকের শপথ</string>
    <string name="tofsiltin_title_MohahishabNirikkhok_shopoth">মহাহিসাব-নিরীক্ষক ও নিয়ন্ত্রকের শপথ</string>
    <string name="tofsiltin_title_PSC_shopoth_title">পিএসসি’র সদস্যদের শপথ</string>
    <string name="tofsiltin_title_PSC_shopoth">৯। সরকারী কর্মকমিশনের সদস্য।-প্রধান বিচারপতি কর্তৃক নিম্নলিখিত ফর্মে শপথ (বা ঘোষণা)-পাঠ পরিচালিত হইবে :\n\n
“আমি, .................., সরকারী কর্মকমিশনের সভাপতি (বা ক্ষেত্রমত সদস্য) নিযুক্ত হইয়া সশ্রদ্ধচিত্তে শপথ (বা দৃঢ়ভাবে ঘোষণা) করিতেছি যে,\n\n
 আমি আইন-অনুযায়ী আমার ও বিশ্বস্ততার সহিত আমার পদের কর্তব্য পালন করিব;\n\n
আমি বাংলাদশের প্রতি অকৃত্রিম বিশ্বাস ও আনুগত্য পোষণ করিব;\n\n
আমি সংবিধানের রক্ষণ, সমর্থন ও নিরাপত্তাবিধান করিব;\n\n
এবং আমার সরকারী কার্য ও সরকারী সিদ্ধান্তকে ব্যক্তিগত স্বার্থের দ্বারা প্রভাবিত হইতে দিব না।”
</string>
</resources>