<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.saad102.shongbidhan.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_ajkerOnucched"
        android:name="com.saad102.shongbidhan.ui.ajkerOnucched.AjkerOnucchedFragment"
        android:label="@string/menu_ajker_onucched"
        tools:layout="@layout/fragment_ajker_onucched" />

    <fragment
        android:id="@+id/nav_tofsil"
        android:name="com.saad102.shongbidhan.ui.tofsil.TofsilFragment"
        android:label="@string/menu_tofsil"
        tools:layout="@layout/fragment_tofsil" />

    <fragment
        android:id="@+id/nav_porar_niyom"
        android:name="com.saad102.shongbidhan.ui.porarNiyom.PorarNiyomFragment"
        android:label="@string/menu_porar_niyom"
        tools:layout="@layout/fragment_porar_niyom" />


    <fragment
        android:id="@+id/nav_itihash"
        android:name="com.saad102.shongbidhan.ui.itihash.ItihashFragment"
        android:label="@string/menu_itihash"
        tools:layout="@layout/fragment_itihash" />
    <fragment
        android:id="@+id/nav_banan_bivrat"
        android:name="com.saad102.shongbidhan.ui.BananBivrat.BananBivratFragment"
        android:label="@string/menu_banan_bivrat"
        tools:layout="@layout/fragment_banan_bivrat" />

    <fragment
        android:id="@+id/nav_ajkerDibosh"
        android:name="com.saad102.shongbidhan.ui.ajkerDibosh.AjkerDiboshFragment"
        android:label="@string/menu_ajker_dibosh"
        tools:layout="@layout/fragment_ajker_dibosh" />
    <fragment
        android:id="@+id/nav_share"
        android:label="@string/menu_share"
        android:name="com.saad102.shongbidhan.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />\
    <fragment
        android:id="@+id/nav_rate_us"
        android:label="@string/menu_rate_us"
        android:name="com.saad102.shongbidhan.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_report"
        android:label="@string/menu_report"
        android:name="com.saad102.shongbidhan.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" />
</navigation>