<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:background="#EDEDED">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_titletin"
            android:textAlignment="center"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_titledui"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_rashtropoti_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_rashtropoti_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_prodhanmontri_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_prodhanmontri_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_speaker_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_speaker_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_MP_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_MP_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_ProdhanBicharpoti_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_ProdhanBicharpoti_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_ProdhanNirbachonComissioner_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_ProdhanNirbachonComissioner_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_MohahishabNirikkhok_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_MohahishabNirikkhok_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_PSC_shopoth_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="24sp"
            android:background="@drawable/box_shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tofsiltin_title_PSC_shopoth"
            android:longClickable="true"
            android:textIsSelectable="true"
           android:layout_marginBottom="20dp"
            android:elevation="8dp"
            android:padding="10dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:background="@drawable/box_shadow"/>






    </LinearLayout>
</ScrollView>

